2009-11-18  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/i386/i486/pthread_cond_broadcast.S: Minor
	optimizations and cleanups.

2009-11-18  Dinakar Guniguntala  <dino@in.ibm.com>

	* sysdeps/unix/sysv/linux/i386/i486/pthread_cond_broadcast.S:
	Remove redundant code. Fix cfi offsets.
	* sysdeps/unix/sysv/linux/i386/i486/pthread_cond_signal.S:
	Fix cfi offsets.

2009-11-17  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/x86_64/pthread_cond_timedwait.S: Minimally
	reduce size of unwind info.

	* sysdeps/unix/sysv/linux/i386/i486/pthread_cond_wait.S: Convert to use
	cfi directives.
	* sysdeps/unix/sysv/linux/i386/i486/pthread_cond_timedwait.S: Likewise.
	Based on a patch by Dinakar Guniguntala <dino@in.ibm.com>.

2009-11-03  Andreas Schwab  <schwab@linux-m68k.org>

	[BZ #4457]
	* sysdeps/pthread/unwind-resume.c: Include <libgcc_s.h> and use
	LIBGCC_S_SO.
	* sysdeps/pthread/unwind-forcedunwind.c: Likewise.

2009-10-30  Ulrich Drepper  <drepper@redhat.com>

	* tst-sem11.c (main): Rewrite to avoid aliasing problems.

	[BZ #3270]
	* allocatestack.c (__nptl_setxid): Perform the operation in multiple
	steps to avoid races with creation and terminations.
	* nptl-init.c (sighandler_setxid): Adjust.
	Patch by Daniel Jacobowitz.

2009-09-07  Andreas Schwab  <schwab@redhat.com>

	* sysdeps/pthread/bits/libc-lock.h (BP_SYM): Remove space before paren.

2009-09-02  Suzuki K P  <suzuki@in.ibm.com>
	    Joseph Myers  <joseph@codesourcery.com>

	[BZ #7094]
	* sysdeps/unix/sysv/linux/timer_create.c (timer_create):
	Initialize the sigev_notify field for newly created timer to make sure
	the timer gets deleted from the active timer's list upon timer_delete.

2009-08-27  Andrew Stubbs  <ams@codesourcery.com>

	* sysdeps/unix/sysv/linux/sh/lowlevellock.S (__lll_timedlock_wait):
	Correct a logic error.

2009-08-25  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/x86_64/tls.h (RTLD_ENABLE_FOREIGN_CALL): Store old value
	of the field in local variables.